fix cdn http jquery

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dark Sky Weather</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
-<link href="https://fonts.googleapis.com/css?family=Kanit:400,600,700|Material+Icons|Roboto:400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kanit:400,600,700|Material+Icons|Roboto:400" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 </head>
 <body>
@@ -90,8 +90,10 @@
       </div>
     </section>
   <!-- Scripts -->
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script src="assets/js/skycons.js"></script>
   <script src="assets/js/app.js"></script>
