--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
               </p>
               <button id="locate" class="btn-large amber darken-4"><i class="material-icons left">place</i>Ubícame</button>
             </div>
+            <div id="preloader" class="preloader-wrapper active center"> 
+            
+            </div>  
           </div>
         </div>
       </div>
